syntax = "proto3";
option java_multiple_files = true;
option java_package = "variant";

import "shared/attribute.proto"; 

enum Status {
  UNKNOWN = 0;
  SOLD_OUT = 1;
  IN_STOCK = 2;
  PRE_ORDER = 3;
  DISCONTINUED = 4;
}

message VariantResponse {
  string id = 1;
  repeated shared.Attribute attributes = 2; 
  Status status = 3;
  double price = 4;
  int32 quantity = 5;
}

message GetVariantsRequest {
  string productId = 1;
}

message VariantsRequest {
  repeated shared.Attribute attributes = 1;
  Status status = 2;
  double price = 3;
  string sku = 4;
}

message CreateVariantsRequest {
  string productId = 1;
  repeated VariantsRequest variants = 2;
}

service VariantService {
  rpc GetVariants(GetVariantsRequest) returns (stream VariantResponse);
}
